VIN is optional

--- a/frontend/submit.html
+++ b/frontend/submit.html
@@ -50,7 +50,7 @@
                                 type="text" 
                                 id="make" 
                                 name="make"
-                                placeholder="напр. Toyota"
+                                placeholder="напр. Mercedes"
                                 required
                             >
                         </div>
@@ -61,7 +61,7 @@
                                 type="text" 
                                 id="model" 
                                 name="model"
-                                placeholder="напр. Corolla"
+                                placeholder="напр. Cls"
                                 required
                             >
                         </div>
